--- a/public/css/header.css
+++ b/public/css/header.css
@@ -54,7 +54,7 @@
     color: white;
     font-size: 60px;
     text-transform: uppercase;
-    font-family: 'Fjalla One';
+    font-family: 'Anton';
     font-style: italic;
     letter-spacing: 2px;
 }
