--- a/public/css/articles.css
+++ b/public/css/articles.css
@@ -1,7 +1,6 @@
 .article {
     text-align: center;
     padding-top: 30px;
-    z-index: 999;
 }
 
 .articles__title {
@@ -18,11 +17,60 @@
     flex-direction: row;
     justify-content: space-between;
     padding-top: 40px;
+    flex-wrap: wrap;
 }
 
 .articles {
     width: 25%;
     height: 250px;
-    background-color: red;
     border-radius: 5px;
+    position: relative;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.articles__filter {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;left: 0;
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.5));
+    
+}
+
+.articles__name {
+    color: white;
+    z-index: 2;
+    position: relative;
+    top: 0; left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Anton';
+    height: 100%;
+    width: 100%;
+    transition: all 0.3s ease-in-out;
+    transform: translateY(100%);
+    cursor: pointer;
+   
+
+}
+
+.articles:hover .articles__name {
+    transform: translateY(0%);
+    
+}
+
+@media only screen and (max-width: 1200px){
+    .articles__items {
+        justify-content: center;
+    }
+    .articles {
+        width: 300px;
+        margin-bottom: 30px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
 }
